--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ classifiers=[
     'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
     'Natural Language :: English',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.5',
     'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
 ]
 packages = [
     { include = "modularyze" },
@@ -24,21 +24,29 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "*"
+python = "^3.6"
+"ruamel.yaml" = "^0.16.12"
+Jinja2 = "^2.11.2"
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
 coverage = "*"
 flake8 = "*"
 invoke = "*"
-isort = "*"
 pylint = "*"
 pytest = "*"
 sphinx = "*"
 tox = "*"
-yapf = "*"
+testfixtures = "^6.15.0"
+sphinx-rtd-theme = "^0.5.0"
+black = {version = "19.3b0", allow-prereleases = true}
 
-
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
 
 [build-system]
 requires = ["poetry>=0.12"]
