--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,19 @@
 [tox]
 isolated_build = true
-envlist = py35, py36, py37, py38, lint, format
+envlist = py36, py37, py38, py39, lint, format
 
 [travis]
 python =
+    3.9: py39
     3.8: py38
     3.7: py37
     3.6: py36
-    3.5: py35
+
+[flake8]
+ignore = E203, E266, E501, W503
+max-line-length = 88
+max-complexity = 18
+select = B,C,E,F,W,T4
 
 [testenv:lint]
 basepython = python
@@ -22,5 +28,7 @@ commands = poetry run invoke format --check
 ; the poetry.lock to source control
 commands_pre = poetry install
 commands = poetry run invoke test
-
+allowlist_externals =
+    pytest
+    poetry
 
