--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ python:
   - 3.6
 
 # Command to install dependencies
-install: pip install -U tox-travis
+before_install: pip install poetry
+install:
+  - poetry install -v
+  - pip install -U tox-travis
 
 # Command to run tests
 script: tox
